# Smartcontract

./: .gitignore  CODE_OF_CONDUCT.md  CONTRACTS.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Makefile  README.md  SECURITY.md  gas-budgets.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: benchmarks.yml  changelog.yml  ci.yml  deploy.yml
adr/: 001-soroban-platform.md  002-storage-patterns.md  003-share-vault-model.md  004-security-model.md  README.md
contracts/admin/: Cargo.toml
contracts/admin/src/: lib.rs  test.rs
contracts/marketplace_escrow/: Cargo.toml
contracts/marketplace_escrow/src/: events.rs  lib.rs  reputation.rs  test.rs  types.rs
contracts/project_registry/: Cargo.toml
contracts/project_registry/src/: lib.rs
contracts/treasury/: Cargo.toml
contracts/treasury/src/: events.rs  lib.rs  test.rs  types.rs
contracts/veloxous_escrow/: Cargo.toml
contracts/veloxous_escrow/src/: lib.rs
docs/: GOVERNANCE.md  STORAGE.md  multi-asset.md
investment_vault/: Cargo.toml
investment_vault/src/: events.rs  lib.rs  test.rs  types.rs  wormhole.rs
investment_vault/test_snapshots/test/: bench_vault_batch_deposit_two_accounts.1.json  test_batch_deposit_mints_for_each_investor.1.json  test_claim_queued_emits_event.1.json  test_claim_settles_queued_redemption.1.json  test_compact_storage_removes_zero_project_investment.1.json  test_concurrent_deposits_and_fund_project.1.json  test_deposit_at_minimum_succeeds.1.json  (+55 more)
project_registry/: Cargo.toml
project_registry/src/: events.rs  lib.rs  test.rs  types.rs
scripts/: check_gas_budgets.py
(+47 files in other folders)
