[workspace]
resolver = "2"
members = [
    "contracts/admin",
    "contracts/marketplace_escrow",
    "contracts/treasury",
    "contracts/veloxous_escrow",
]

[workspace.dependencies]
soroban-sdk = { version = "=26.1.0" }
stellar-tokens = { version = "=0.7.2" }
stellar-access = { version = "=0.7.2" }
stellar-macros = { version = "=0.7.2" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
